updated fr translations

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-08 13:25+0100\n"
-"PO-Revision-Date: 2023-07-20 21:28+0200\n"
+"PO-Revision-Date: 2024-12-08 14:00+0100\n"
 "Last-Translator: Irénée Thirion <irenee.thirion@e.email>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
 "fr/)\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -65,17 +65,17 @@ msgstr "Recherche sur Soundcloud"
 
 #: src/gpodder/directory.py:195
 msgid "Sorry, soundcloud search doesn't work anymore."
-msgstr ""
+msgstr "La recherche soundclound ne fonctionne plus, désolé."
 
 #: src/gpodder/directory.py:198
 #, python-format
 msgid "Error querying soundcloud: %(code)s %(msg)s"
-msgstr ""
+msgstr "Erreur avec la recherch soundcloud: %(code)s %(msg)s"
 
 #: src/gpodder/directory.py:199
 #, python-format
 msgid "Unexpected response from soundcloud: %r"
-msgstr ""
+msgstr "Réponse inattendue de soundcloud: %r"
 
 #: src/gpodder/directory.py:204
 msgid "Imported OPML file"
@@ -368,29 +368,27 @@ msgstr "Hier"
 
 #: src/gpodder/util.py:568
 msgid "kB"
-msgstr ""
+msgstr "ko"
 
 #: src/gpodder/util.py:569
 msgid "MB"
-msgstr ""
+msgstr "mo"
 
 #: src/gpodder/util.py:570
 msgid "GB"
-msgstr ""
+msgstr "go"
 
 #: src/gpodder/util.py:574
-#, fuzzy
-#| msgid "KiB/s"
 msgid "KiB"
-msgstr "KiB/s"
+msgstr "KiB"
 
 #: src/gpodder/util.py:575
 msgid "MiB"
-msgstr ""
+msgstr "mio"
 
 #: src/gpodder/util.py:576
 msgid "GiB"
-msgstr ""
+msgstr "gio"
 
 #: src/gpodder/util.py:582 src/gpodder/util.py:585
 msgid "(unknown)"
@@ -398,7 +396,7 @@ msgstr "(inconnu)"
 
 #: src/gpodder/util.py:592
 msgid "B"
-msgstr ""
+msgstr "o"
 
 #: src/gpodder/util.py:1475 src/gpodder/util.py:1497
 #, python-format
@@ -507,7 +505,7 @@ msgstr "Application par défaut"
 #: src/gpodder/gtkui/download.py:98
 #, python-format
 msgid "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
-msgstr ""
+msgstr "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
 
 #: src/gpodder/gtkui/main.py:178 share/applications/gpodder.desktop.in.h:1
 msgid "gPodder"
@@ -1592,27 +1590,25 @@ msgid "Please wait while the podcast list is downloaded"
 msgstr "Veuillez patienter pendant que la liste de podcasts est téléchargée"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:263
-#, fuzzy
-#| msgid "Error: %s"
 msgid "Error"
-msgstr "Erreur : %s"
+msgstr "Erreur"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:267
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid ""
 "Error: %s\n"
 "\n"
 "%s"
-msgstr "Erreur : %s"
+msgstr ""
+"Erreur: %s\n"
+"\n"
+"%s"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:270
 msgid "No results"
-msgstr ""
+msgstr "Rien trouvé"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:271
-#, fuzzy
-#| msgid "No podcasts found."
 msgid "Sorry, no podcasts were found"
 msgstr "Aucun podcast trouvé."
 
@@ -1662,15 +1658,15 @@ msgstr "Personnalisé (%(format_ids)s)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:190
 msgid "SOCKS5h (Remote DNS)"
-msgstr ""
+msgstr "SOCKS5h (DNS via le proxy)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:191
 msgid "SOCKS5"
-msgstr ""
+msgstr "SOCKS5"
 
 #: src/gpodder/gtkui/desktop/preferences.py:192
 msgid "HTTP"
-msgstr ""
+msgstr "HTTP"
 
 #: src/gpodder/gtkui/desktop/preferences.py:460
 msgid "Name"
@@ -1981,30 +1977,25 @@ msgstr ""
 "Affiche des bulles de notification Windows lors de différents événements."
 
 #: share/gpodder/extensions/podverse.py:23
-#, fuzzy
-#| msgid "Search for:"
 msgid "Search Podverse"
-msgstr "Rechercher :"
+msgstr "Recherche Podverse"
 
 #: share/gpodder/extensions/podverse.py:24
 msgid "Search podverse podcast index"
-msgstr ""
+msgstr "Recherche dans l'index de podcasts podverse"
 
 #: share/gpodder/extensions/podverse.py:31
-#, fuzzy
-#| msgid "gpodder.net search"
 msgid "Podverse search"
-msgstr "recherche sur gpodder.net"
+msgstr "Recherche dans l'index de podcasts podverse"
 
 #: share/gpodder/extensions/podverse.py:37
 msgid "Please provide at least 3 characters"
-msgstr ""
+msgstr "Merci de saisir au moins 3 caractères"
 
 #: share/gpodder/extensions/podverse.py:43
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid "Error searching: %s"
-msgstr "Erreur : %s"
+msgstr "Erreur lors de la recherche : %s"
 
 #: share/gpodder/extensions/rename_download.py:18
 msgid "Rename episodes after download"
@@ -2031,11 +2022,10 @@ msgid "Renaming all downloaded episodes"
 msgstr "Renommage de tous les épisodes téléchargés en cours"
 
 #: share/gpodder/extensions/rename_download.py:80
-#, fuzzy, python-format
-#| msgid "Renamed %(count)d downloaded episodes"
+#, python-format
 msgid "Renamed %(count)d downloaded episode"
 msgid_plural "Renamed %(count)d downloaded episodes"
-msgstr[0] "%(count)d épisodes ont été renommés"
+msgstr[0] "%(count)d épisode a été renommé"
 msgstr[1] "%(count)d épisodes ont été renommés"
 
 #: share/gpodder/extensions/rm_ogg_cover.py:37
@@ -2078,51 +2068,46 @@ msgstr "Envoie les podcasts vers des lecteurs Sonos"
 #: share/gpodder/extensions/subscription_stats.py:17
 #: share/gpodder/extensions/subscription_stats.py:35
 #: share/gpodder/extensions/subscription_stats.py:145
-#, fuzzy
-#| msgid "Subscription paused"
 msgid "Subscription Statistics"
-msgstr "Abonnement en pause"
+msgstr "Statistiques sur les abonnements"
 
 #: share/gpodder/extensions/subscription_stats.py:18
 msgid "Show publishing statistics for subscriptions."
-msgstr ""
+msgstr "Afficher des statistiques sur les abonnements."
 
 #: share/gpodder/extensions/subscription_stats.py:52
-#, fuzzy
-#| msgid "Update podcast"
 msgid "Updated"
-msgstr "Mettre à jour le podcast"
+msgstr "Mis à jour"
 
 #: share/gpodder/extensions/subscription_stats.py:60
 msgid "Days"
-msgstr ""
+msgstr "Jours"
 
 #: share/gpodder/extensions/subscription_stats.py:153
-#, fuzzy, python-format
-#| msgid "Subscription paused"
+#, python-format
 msgid "%d subscriptions (%d paused)"
-msgstr "Abonnement en pause"
+msgstr "%d abonnements (%d en pause)"
 
 #: share/gpodder/extensions/subscription_stats.py:162
 msgid "daily"
-msgstr ""
+msgstr "quotidien"
 
 #: share/gpodder/extensions/subscription_stats.py:163
 msgid "weekly"
-msgstr ""
+msgstr "hebdomadaire"
 
 #: share/gpodder/extensions/subscription_stats.py:164
 msgid "monthly"
-msgstr ""
+msgstr "mensuel"
 
 #: share/gpodder/extensions/subscription_stats.py:165
 msgid "yearly"
-msgstr ""
+msgstr "annuel"
 
 #: share/gpodder/extensions/subscription_stats.py:169
 #, python-format
 msgid "Average days between the last %d episodes."
-msgstr ""
+msgstr "Nombre de jours moyen entre les derniers %d épisodes."
 
 #: share/gpodder/extensions/tagging.py:50
 msgid "Tag downloaded files using Mutagen"
@@ -2342,22 +2327,16 @@ msgid "Add"
 msgstr "Ajouter"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:5
-#, fuzzy
-#| msgid "<big>Welcome to gPodder</big>"
 msgid "<big>Choose</big>"
-msgstr "<b><big>Bienvenue dans gPodder</big></b>"
+msgstr "<big>Choisir</big>"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:6
-#, fuzzy
-#| msgid "Select folder for playlists"
 msgid "Select a source for new podcasts"
-msgstr "Sélectionnez le répertoire de listes de lecture"
+msgstr "Sélectionnez une source de podcasts"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
-#, fuzzy
-#| msgid "Podcast Client"
 msgid "Podcast Providers"
-msgstr "Client de podcasts"
+msgstr "Sources de podcasts"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:8
 msgid "label"
@@ -2368,28 +2347,20 @@ msgid "..."
 msgstr "..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:10
-#, fuzzy
-#| msgid "Download new episodes"
 msgid "Download in progress..."
-msgstr "Télécharger de nouveaux épisodes"
+msgstr "Téléchargement en cours..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:11
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Retrieve Progress"
-msgstr "Paramètres du podcast"
+msgstr "Barre de progression de récupération du podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:12
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Results"
-msgstr "Paramètres du podcast"
+msgstr "Résultats de recherche"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:13
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Selection"
-msgstr "Paramètres du podcast"
+msgstr "Choix d'un podcast"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
 #: share/gpodder/ui/gtk/gpodder.ui.h:6 share/gpodder/ui/gtk/menus.ui.h:1
@@ -2414,19 +2385,19 @@ msgstr "Recherche progressive"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:7
 msgid "Color scheme:"
-msgstr ""
+msgstr "Thème de couleur:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
 msgid "System"
-msgstr ""
+msgstr "Par défaut"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Light"
-msgstr ""
+msgstr "Clair"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:10
 msgid "Dark"
-msgstr ""
+msgstr "Foncé"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:11
 msgid "General"
@@ -2463,10 +2434,8 @@ msgid "Episode descriptions"
 msgstr "Description de l'épisode"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:18
-#, fuzzy
-#| msgid "_View"
 msgid "View"
-msgstr "_Affichage"
+msgstr "Affichage"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:19
 msgid "Synchronize subscriptions and episode actions"
@@ -2572,6 +2541,8 @@ msgid ""
 "Sync existing episodes on device when file size differs from gPodder "
 "(disable if device modifies files)"
 msgstr ""
+"Copier les épisodes sur l'appareil quand la taille est différente (à "
+"désactiver si l'appareil modifie les fichiers)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:46
 msgid "Devices"
@@ -2591,37 +2562,35 @@ msgstr "Format Vimeo privilégié :"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:51
 msgid "Use proxy (Overrides environment variables)"
-msgstr ""
+msgstr "Utiliser un proxy (ignore les variables d'environnement)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:52
 msgid "Proxy type:"
-msgstr ""
+msgstr "Type de proxy:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:53
-#, fuzzy
-#| msgid "Username:"
 msgid "Hostname:"
-msgstr "Nom d’utilisateur :"
+msgstr "Serveur:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:54
 msgid "Port:"
-msgstr ""
+msgstr "Port:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:55
-#, fuzzy
-#| msgid "Wrong username/password"
 msgid "Use username and password"
-msgstr "Mauvais nom d'utilisateur / mot de passe"
+msgstr "Utiliser un utilisateur et mot de passe"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:56
 msgid ""
 "Proxies given in environment variables (will be used only if proxy above is "
 "disabled):"
 msgstr ""
+"Voici le proxy donné par les variables d'environnement (utilisé seulement si "
+"la case \"Utiliser un proxy\" est désactivée):"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:58
 msgid "Network"
-msgstr ""
+msgstr "Réseau"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:8 share/gpodder/ui/gtk/menus.ui.h:9
 msgid "Check for new episodes"
@@ -2817,32 +2786,24 @@ msgid "Visible columns"
 msgstr "Colonnes visibles"
 
 #: share/gpodder/ui/gtk/menus.ui.h:53
-#, fuzzy
-#| msgid "Update interval:"
 msgid "Update channel"
-msgstr "Intervalle de mise à jour :"
+msgstr "Mettre à jour le podcast"
 
 #: share/gpodder/ui/gtk/menus.ui.h:54
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Channel settings"
 msgstr "Paramètres du podcast"
 
 #: share/gpodder/ui/gtk/menus.ui.h:55
-#, fuzzy
-#| msgid "Select channel"
 msgid "Delete channel"
-msgstr "Sélectionner le Podcast de cet épisode"
+msgstr "Supprimer le podcast"
 
 #: share/gpodder/ui/gtk/menus.ui.h:56
 msgid "Mark episodes as old"
 msgstr "Marquer les épisodes comme obsolètes"
 
 #: share/gpodder/ui/gtk/menus.ui.h:57
-#, fuzzy
-#| msgid "All episodes"
 msgid "Archive all episodes"
-msgstr "Tous les épisodes"
+msgstr "Archiver tous les épisodes"
 
 #: share/gpodder/ui/gtk/menus.ui.h:58
 msgid "Refresh image"
