Updated Italian translation

--- a/po/it.po
+++ b/po/it.po
@@ -1,10 +1,10 @@
 # Italian translation of the GPODDER package.
-# Copyright (C) 2019 THE GPODDER'S COPYRIGHT HOLDER
+# Copyright (C) 2019-2024 THE GPODDER'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the GPODDER package.
 #
 # Translators:
 # bovirus <bovirus@gmail.com>, 2023.
-# Marco Ciampa <ciampix@posteo.net>, 2019-2022.
+# Marco Ciampa <ciampix@posteo.net>, 2019-2024.
 # Alessandro Campidori  <alessandrocampidori@gmail.com>, 2012.
 # Andrea Scarpino <andrea@archlinux.org>, 2011.
 # Thomas Perl <thp@perli.net>, 2006.
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: gPodder -Translation v. 21.09.2023\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-08 13:25+0100\n"
-"PO-Revision-Date: 2023-09-21 16:51+0200\n"
+"PO-Revision-Date: 2024-12-08 17:55+0100\n"
 "Last-Translator: bovirus <bovirus@gmail.com>\n"
 "Language-Team: Italian (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: it\n"
@@ -68,17 +68,17 @@ msgstr "Ricerca su Soundcloud"
 
 #: src/gpodder/directory.py:195
 msgid "Sorry, soundcloud search doesn't work anymore."
-msgstr ""
+msgstr "Spiacenti, la ricerca soundcloud non funziona più."
 
 #: src/gpodder/directory.py:198
 #, python-format
 msgid "Error querying soundcloud: %(code)s %(msg)s"
-msgstr ""
+msgstr "Errore nell'interrogare soundcloud: %(code)s %(msg)s"
 
 #: src/gpodder/directory.py:199
 #, python-format
 msgid "Unexpected response from soundcloud: %r"
-msgstr ""
+msgstr "Risposta inaspettata dal soundcloud: %r"
 
 #: src/gpodder/directory.py:204
 msgid "Imported OPML file"
@@ -1587,29 +1587,27 @@ msgid "Please wait while the podcast list is downloaded"
 msgstr "Attendi il completamento del download dell'elenco podcast"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:263
-#, fuzzy
-#| msgid "Error: %s"
 msgid "Error"
-msgstr "Errore: %s"
+msgstr "Errore"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:267
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid ""
 "Error: %s\n"
 "\n"
 "%s"
-msgstr "Errore: %s"
+msgstr ""
+"Errore: %s\n"
+"\n"
+"%s"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:270
 msgid "No results"
-msgstr ""
+msgstr "Nessun risultato"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:271
-#, fuzzy
-#| msgid "No podcasts found."
 msgid "Sorry, no podcasts were found"
-msgstr "Nessun podcast trovato."
+msgstr "Spiacenti, nessun podcast trovato"
 
 #: src/gpodder/gtkui/desktop/preferences.py:47
 #: src/gpodder/gtkui/desktop/preferences.py:90
@@ -1657,15 +1655,15 @@ msgstr "Personalizza (%(format_ids)s)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:190
 msgid "SOCKS5h (Remote DNS)"
-msgstr ""
+msgstr "SOCKS5h (DNS remoto)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:191
 msgid "SOCKS5"
-msgstr ""
+msgstr "SOCKS5"
 
 #: src/gpodder/gtkui/desktop/preferences.py:192
 msgid "HTTP"
-msgstr ""
+msgstr "HTTP"
 
 #: src/gpodder/gtkui/desktop/preferences.py:460
 msgid "Name"
@@ -1969,30 +1967,25 @@ msgid "Display notification bubbles for different events."
 msgstr "Visualizza notifiche per diversi eventi."
 
 #: share/gpodder/extensions/podverse.py:23
-#, fuzzy
-#| msgid "Search for:"
 msgid "Search Podverse"
-msgstr "Cerca:"
+msgstr "Cerca nel Podiverso"
 
 #: share/gpodder/extensions/podverse.py:24
 msgid "Search podverse podcast index"
-msgstr ""
+msgstr "Cerca nell'indice dei podcast Podiverso"
 
 #: share/gpodder/extensions/podverse.py:31
-#, fuzzy
-#| msgid "gpodder.net search"
 msgid "Podverse search"
-msgstr "ricerca su gpodder.net"
+msgstr "Ricera Podiverso"
 
 #: share/gpodder/extensions/podverse.py:37
 msgid "Please provide at least 3 characters"
-msgstr ""
+msgstr "Fornire almento 3 caratteri"
 
 #: share/gpodder/extensions/podverse.py:43
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid "Error searching: %s"
-msgstr "Errore: %s"
+msgstr "Errore ricerca: %s"
 
 #: share/gpodder/extensions/rename_download.py:18
 msgid "Rename episodes after download"
@@ -2062,51 +2055,46 @@ msgstr "Invia streaming podcast ad altoparlanti Sonos"
 #: share/gpodder/extensions/subscription_stats.py:17
 #: share/gpodder/extensions/subscription_stats.py:35
 #: share/gpodder/extensions/subscription_stats.py:145
-#, fuzzy
-#| msgid "Subscription paused"
 msgid "Subscription Statistics"
-msgstr "Iscrizione in pausa"
+msgstr "Statistiche iscrizioni"
 
 #: share/gpodder/extensions/subscription_stats.py:18
 msgid "Show publishing statistics for subscriptions."
-msgstr ""
+msgstr "Mostra le statistiche per le iscrizioni."
 
 #: share/gpodder/extensions/subscription_stats.py:52
-#, fuzzy
-#| msgid "Update podcast"
 msgid "Updated"
-msgstr "Aggiorna podcast"
+msgstr "Aggiornato"
 
 #: share/gpodder/extensions/subscription_stats.py:60
 msgid "Days"
-msgstr ""
+msgstr "Giorni"
 
 #: share/gpodder/extensions/subscription_stats.py:153
-#, fuzzy, python-format
-#| msgid "Subscription paused"
+#, python-format
 msgid "%d subscriptions (%d paused)"
-msgstr "Iscrizione in pausa"
+msgstr "%d iscrizioni (%d in pausa)"
 
 #: share/gpodder/extensions/subscription_stats.py:162
 msgid "daily"
-msgstr ""
+msgstr "giornalieri"
 
 #: share/gpodder/extensions/subscription_stats.py:163
 msgid "weekly"
-msgstr ""
+msgstr "settimanali"
 
 #: share/gpodder/extensions/subscription_stats.py:164
 msgid "monthly"
-msgstr ""
+msgstr "mensili"
 
 #: share/gpodder/extensions/subscription_stats.py:165
 msgid "yearly"
-msgstr ""
+msgstr "annuali"
 
 #: share/gpodder/extensions/subscription_stats.py:169
 #, python-format
 msgid "Average days between the last %d episodes."
-msgstr ""
+msgstr "Giorni medi tra gli ultimi %d episodi."
 
 #: share/gpodder/extensions/tagging.py:50
 msgid "Tag downloaded files using Mutagen"
@@ -2326,22 +2314,16 @@ msgid "Add"
 msgstr "Aggiungi"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:5
-#, fuzzy
-#| msgid "<big>Welcome to gPodder</big>"
 msgid "<big>Choose</big>"
-msgstr "<big>Benvenuto in gPodder</big>"
+msgstr "<big>Scegli</big>"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:6
-#, fuzzy
-#| msgid "Select folder for playlists"
 msgid "Select a source for new podcasts"
-msgstr "Seleziona cartella per le playlist"
+msgstr "Seleziona la sorgente per i nuovi podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
-#, fuzzy
-#| msgid "Podcast Client"
 msgid "Podcast Providers"
-msgstr "Client podcast"
+msgstr "Fornitori di podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:8
 msgid "label"
@@ -2352,28 +2334,20 @@ msgid "..."
 msgstr "..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:10
-#, fuzzy
-#| msgid "Download new episodes"
 msgid "Download in progress..."
-msgstr "Scarica nuovi episodi"
+msgstr "Scaricamento in corso..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:11
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Retrieve Progress"
-msgstr "Impostazioni podcast"
+msgstr "Avanzamento recupero podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:12
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Results"
-msgstr "Impostazioni podcast"
+msgstr "Risultati podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:13
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Selection"
-msgstr "Impostazioni podcast"
+msgstr "Selezione podcast"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
 #: share/gpodder/ui/gtk/gpodder.ui.h:6 share/gpodder/ui/gtk/menus.ui.h:1
@@ -2398,19 +2372,19 @@ msgstr "Trova durante la digitazione"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:7
 msgid "Color scheme:"
-msgstr ""
+msgstr "Schema colori:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
 msgid "System"
-msgstr ""
+msgstr "Di sistema"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Light"
-msgstr ""
+msgstr "Luminoso"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:10
 msgid "Dark"
-msgstr ""
+msgstr "Scuro"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:11
 msgid "General"
@@ -2447,10 +2421,8 @@ msgid "Episode descriptions"
 msgstr "Descrizioni episodi"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:18
-#, fuzzy
-#| msgid "_View"
 msgid "View"
-msgstr "_Visualizza"
+msgstr "Visualizza"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:19
 msgid "Synchronize subscriptions and episode actions"
@@ -2574,37 +2546,33 @@ msgstr "Formato video preferito:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:51
 msgid "Use proxy (Overrides environment variables)"
-msgstr ""
+msgstr "Usa il proxy (passa sopra alle variabili ambiente)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:52
 msgid "Proxy type:"
-msgstr ""
+msgstr "Tipo proxy:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:53
-#, fuzzy
-#| msgid "Username:"
 msgid "Hostname:"
-msgstr "Nome utente:"
+msgstr "Nome host:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:54
 msgid "Port:"
-msgstr ""
+msgstr "Porta:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:55
-#, fuzzy
-#| msgid "Wrong username/password"
 msgid "Use username and password"
-msgstr "Nome utente o password errati"
+msgstr "Usa nome utente e password"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:56
 msgid ""
 "Proxies given in environment variables (will be used only if proxy above is "
 "disabled):"
-msgstr ""
+msgstr "Proxy specificati nelle variabili ambiente (verranno usati solo se il proxy sopra è disabilitato):"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:58
 msgid "Network"
-msgstr ""
+msgstr "Rete"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:8 share/gpodder/ui/gtk/menus.ui.h:9
 msgid "Check for new episodes"
@@ -2799,32 +2767,24 @@ msgid "Visible columns"
 msgstr "Colonne visualizzate"
 
 #: share/gpodder/ui/gtk/menus.ui.h:53
-#, fuzzy
-#| msgid "Update interval:"
 msgid "Update channel"
-msgstr "Intervallo aggiornamento:"
+msgstr "Aggiorna canale"
 
 #: share/gpodder/ui/gtk/menus.ui.h:54
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Channel settings"
-msgstr "Impostazioni podcast"
+msgstr "Impostazioni canale"
 
 #: share/gpodder/ui/gtk/menus.ui.h:55
-#, fuzzy
-#| msgid "Select channel"
 msgid "Delete channel"
-msgstr "Seleziona canale"
+msgstr "Elimina canale"
 
 #: share/gpodder/ui/gtk/menus.ui.h:56
 msgid "Mark episodes as old"
 msgstr "Segna episodi come vecchi"
 
 #: share/gpodder/ui/gtk/menus.ui.h:57
-#, fuzzy
-#| msgid "All episodes"
 msgid "Archive all episodes"
-msgstr "Tutti gli episodi"
+msgstr "Archivia tutti gli episodi"
 
 #: share/gpodder/ui/gtk/menus.ui.h:58
 msgid "Refresh image"
