--- a/po/it.po
+++ b/po/it.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: gPodder -Translation v. 21.09.2023\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-08 13:25+0100\n"
-"PO-Revision-Date: 2023-09-21 16:51+0200\n"
+"PO-Revision-Date: 2024-12-09 19:22+0100\n"
 "Last-Translator: bovirus <bovirus@gmail.com>\n"
 "Language-Team: Italian (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: it\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: Poedit 3.5\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: src/gpodder/config.py:53
@@ -68,17 +68,17 @@ msgstr "Ricerca su Soundcloud"
 
 #: src/gpodder/directory.py:195
 msgid "Sorry, soundcloud search doesn't work anymore."
-msgstr ""
+msgstr "Siamo spiacenti, la ricerca su Soundcloud non funziona più."
 
 #: src/gpodder/directory.py:198
 #, python-format
 msgid "Error querying soundcloud: %(code)s %(msg)s"
-msgstr ""
+msgstr "Errore durante la query su Soundcloud: %(code)s %(msg)s"
 
 #: src/gpodder/directory.py:199
 #, python-format
 msgid "Unexpected response from soundcloud: %r"
-msgstr ""
+msgstr "Risposta inaspettata da soundcloud: %r"
 
 #: src/gpodder/directory.py:204
 msgid "Imported OPML file"
@@ -555,7 +555,7 @@ msgstr "A_pplica"
 
 #: src/gpodder/gtkui/main.py:673
 msgid "Uploading subscriptions"
-msgstr "Caricaemnto iscrizioni"
+msgstr "Caricamento iscrizioni"
 
 #: src/gpodder/gtkui/main.py:674
 msgid "Your subscriptions are being uploaded to the server."
@@ -1511,7 +1511,7 @@ msgstr "Qui puoi inserire una sola immagine o indirizzo."
 #: src/gpodder/gtkui/desktop/channel.py:175
 #: src/gpodder/gtkui/desktop/channel.py:187
 msgid "Drag and drop"
-msgstr "Trascina e rialscia"
+msgstr "Trascina e rilascia"
 
 #: src/gpodder/gtkui/desktop/channel.py:186
 msgid "You can only drop local files and http:// URLs here."
@@ -1587,27 +1587,25 @@ msgid "Please wait while the podcast list is downloaded"
 msgstr "Attendi il completamento del download dell'elenco podcast"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:263
-#, fuzzy
-#| msgid "Error: %s"
 msgid "Error"
-msgstr "Errore: %s"
+msgstr "Errore"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:267
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid ""
 "Error: %s\n"
 "\n"
 "%s"
-msgstr "Errore: %s"
+msgstr ""
+"Errore: %s\n"
+"\n"
+"%s"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:270
 msgid "No results"
-msgstr ""
+msgstr "Nessun risultato"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:271
-#, fuzzy
-#| msgid "No podcasts found."
 msgid "Sorry, no podcasts were found"
 msgstr "Nessun podcast trovato."
 
@@ -1657,15 +1655,15 @@ msgstr "Personalizza (%(format_ids)s)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:190
 msgid "SOCKS5h (Remote DNS)"
-msgstr ""
+msgstr "SOCKS5h (DNS remoto)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:191
 msgid "SOCKS5"
-msgstr ""
+msgstr "SOCKS5"
 
 #: src/gpodder/gtkui/desktop/preferences.py:192
 msgid "HTTP"
-msgstr ""
+msgstr "HTTP"
 
 #: src/gpodder/gtkui/desktop/preferences.py:460
 msgid "Name"
@@ -1954,7 +1952,7 @@ msgstr "Normalizza audio tramite ricodifica"
 
 #: share/gpodder/extensions/normalize_audio.py:22
 msgid "Normalize the volume of audio files with normalize-audio"
-msgstr "Livella volume file audio con normalizzatore-audio"
+msgstr "Livella volume file audio con normalizzatore audio"
 
 #: share/gpodder/extensions/normalize_audio.py:106
 msgid "File normalized"
@@ -1969,30 +1967,25 @@ msgid "Display notification bubbles for different events."
 msgstr "Visualizza notifiche per diversi eventi."
 
 #: share/gpodder/extensions/podverse.py:23
-#, fuzzy
-#| msgid "Search for:"
 msgid "Search Podverse"
-msgstr "Cerca:"
+msgstr "Cerca podverse"
 
 #: share/gpodder/extensions/podverse.py:24
 msgid "Search podverse podcast index"
-msgstr ""
+msgstr "Cerca nell'indice dei podcast podverse"
 
 #: share/gpodder/extensions/podverse.py:31
-#, fuzzy
-#| msgid "gpodder.net search"
 msgid "Podverse search"
-msgstr "ricerca su gpodder.net"
+msgstr "Ricerca podverse"
 
 #: share/gpodder/extensions/podverse.py:37
 msgid "Please provide at least 3 characters"
-msgstr ""
+msgstr "Inserisci almeno 3 caratteri"
 
 #: share/gpodder/extensions/podverse.py:43
-#, fuzzy, python-format
-#| msgid "Error: %s"
+#, python-format
 msgid "Error searching: %s"
-msgstr "Errore: %s"
+msgstr "Errore durante la ricerca: %s"
 
 #: share/gpodder/extensions/rename_download.py:18
 msgid "Rename episodes after download"
@@ -2062,51 +2055,46 @@ msgstr "Invia streaming podcast ad altoparlanti Sonos"
 #: share/gpodder/extensions/subscription_stats.py:17
 #: share/gpodder/extensions/subscription_stats.py:35
 #: share/gpodder/extensions/subscription_stats.py:145
-#, fuzzy
-#| msgid "Subscription paused"
 msgid "Subscription Statistics"
-msgstr "Iscrizione in pausa"
+msgstr "Statistiche abbonamento"
 
 #: share/gpodder/extensions/subscription_stats.py:18
 msgid "Show publishing statistics for subscriptions."
-msgstr ""
+msgstr "Visualizza le statistiche di pubblicazione per gli abbonamenti."
 
 #: share/gpodder/extensions/subscription_stats.py:52
-#, fuzzy
-#| msgid "Update podcast"
 msgid "Updated"
-msgstr "Aggiorna podcast"
+msgstr "Aggiornato"
 
 #: share/gpodder/extensions/subscription_stats.py:60
 msgid "Days"
-msgstr ""
+msgstr "Giorni"
 
 #: share/gpodder/extensions/subscription_stats.py:153
-#, fuzzy, python-format
-#| msgid "Subscription paused"
+#, python-format
 msgid "%d subscriptions (%d paused)"
-msgstr "Iscrizione in pausa"
+msgstr "%d abbonamenti (%d in pausa)"
 
 #: share/gpodder/extensions/subscription_stats.py:162
 msgid "daily"
-msgstr ""
+msgstr "giornalmente"
 
 #: share/gpodder/extensions/subscription_stats.py:163
 msgid "weekly"
-msgstr ""
+msgstr "settimanalmente"
 
 #: share/gpodder/extensions/subscription_stats.py:164
 msgid "monthly"
-msgstr ""
+msgstr "mensilmente"
 
 #: share/gpodder/extensions/subscription_stats.py:165
 msgid "yearly"
-msgstr ""
+msgstr "annualmente"
 
 #: share/gpodder/extensions/subscription_stats.py:169
 #, python-format
 msgid "Average days between the last %d episodes."
-msgstr ""
+msgstr "Giorni medi tra gli ultimi %d episodi."
 
 #: share/gpodder/extensions/tagging.py:50
 msgid "Tag downloaded files using Mutagen"
@@ -2245,7 +2233,7 @@ msgstr "youtube-dl"
 
 #: share/gpodder/ui/gtk/gpodderaddpodcast.ui.h:1
 msgid "Add a new podcast"
-msgstr "Aggiung un nuovo podcast"
+msgstr "Aggiungi nuovo podcast"
 
 #: share/gpodder/ui/gtk/gpodderaddpodcast.ui.h:5
 msgid "_Paste"
@@ -2273,7 +2261,7 @@ msgstr "Pausa iscrizione"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:9
 msgid "Sync to player devices"
-msgstr "Sincronizza dispositivi rirpoduzione"
+msgstr "Sincronizza dispositivi riproduzione"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:10
 msgid "Section:"
@@ -2326,22 +2314,16 @@ msgid "Add"
 msgstr "Aggiungi"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:5
-#, fuzzy
-#| msgid "<big>Welcome to gPodder</big>"
 msgid "<big>Choose</big>"
-msgstr "<big>Benvenuto in gPodder</big>"
+msgstr "<big>Scegli</big>"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:6
-#, fuzzy
-#| msgid "Select folder for playlists"
 msgid "Select a source for new podcasts"
-msgstr "Seleziona cartella per le playlist"
+msgstr "Seleziona una sorgente per i nuovi podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
-#, fuzzy
-#| msgid "Podcast Client"
 msgid "Podcast Providers"
-msgstr "Client podcast"
+msgstr "Fornitori podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:8
 msgid "label"
@@ -2352,28 +2334,20 @@ msgid "..."
 msgstr "..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:10
-#, fuzzy
-#| msgid "Download new episodes"
 msgid "Download in progress..."
-msgstr "Scarica nuovi episodi"
+msgstr "Download in corso..."
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:11
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Retrieve Progress"
-msgstr "Impostazioni podcast"
+msgstr "Progresso recupero podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:12
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Results"
-msgstr "Impostazioni podcast"
+msgstr "Risultati podcast"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:13
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Podcast Selection"
-msgstr "Impostazioni podcast"
+msgstr "Selezione podcast"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
 #: share/gpodder/ui/gtk/gpodder.ui.h:6 share/gpodder/ui/gtk/menus.ui.h:1
@@ -2398,19 +2372,19 @@ msgstr "Trova durante la digitazione"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:7
 msgid "Color scheme:"
-msgstr ""
+msgstr "Schema colori"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
 msgid "System"
-msgstr ""
+msgstr "Sistema"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Light"
-msgstr ""
+msgstr "Chiaro"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:10
 msgid "Dark"
-msgstr ""
+msgstr "Scuro"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:11
 msgid "General"
@@ -2447,8 +2421,6 @@ msgid "Episode descriptions"
 msgstr "Descrizioni episodi"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:18
-#, fuzzy
-#| msgid "_View"
 msgid "View"
 msgstr "_Visualizza"
 
@@ -2574,37 +2546,35 @@ msgstr "Formato video preferito:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:51
 msgid "Use proxy (Overrides environment variables)"
-msgstr ""
+msgstr "Usa proxy (sostituisce le variabili ambiente)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:52
 msgid "Proxy type:"
-msgstr ""
+msgstr "Tipo proxy:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:53
-#, fuzzy
-#| msgid "Username:"
 msgid "Hostname:"
-msgstr "Nome utente:"
+msgstr "Nome host:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:54
 msgid "Port:"
-msgstr ""
+msgstr "Porta:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:55
-#, fuzzy
-#| msgid "Wrong username/password"
 msgid "Use username and password"
-msgstr "Nome utente o password errati"
+msgstr "Nome utente o password"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:56
 msgid ""
 "Proxies given in environment variables (will be used only if proxy above is "
 "disabled):"
 msgstr ""
+"Proxy forniti nelle variabili ambiente (verranno usati solo se il proxy "
+"sopra è disabilitato):"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:58
 msgid "Network"
-msgstr ""
+msgstr "Rete"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:8 share/gpodder/ui/gtk/menus.ui.h:9
 msgid "Check for new episodes"
@@ -2799,32 +2769,24 @@ msgid "Visible columns"
 msgstr "Colonne visualizzate"
 
 #: share/gpodder/ui/gtk/menus.ui.h:53
-#, fuzzy
-#| msgid "Update interval:"
 msgid "Update channel"
-msgstr "Intervallo aggiornamento:"
+msgstr "Canale aggiornamento:"
 
 #: share/gpodder/ui/gtk/menus.ui.h:54
-#, fuzzy
-#| msgid "Podcast settings"
 msgid "Channel settings"
-msgstr "Impostazioni podcast"
+msgstr "Impostazioni canale"
 
 #: share/gpodder/ui/gtk/menus.ui.h:55
-#, fuzzy
-#| msgid "Select channel"
 msgid "Delete channel"
-msgstr "Seleziona canale"
+msgstr "Elimina canale"
 
 #: share/gpodder/ui/gtk/menus.ui.h:56
 msgid "Mark episodes as old"
 msgstr "Segna episodi come vecchi"
 
 #: share/gpodder/ui/gtk/menus.ui.h:57
-#, fuzzy
-#| msgid "All episodes"
 msgid "Archive all episodes"
-msgstr "Tutti gli episodi"
+msgstr "Archivia tutti gli episodi"
 
 #: share/gpodder/ui/gtk/menus.ui.h:58
 msgid "Refresh image"
@@ -2963,12 +2925,12 @@ msgstr "L'episodio è già stato eliminato."
 #: bin/gpo:736
 #, python-format
 msgid "Disabling feed update from %s."
-msgstr "Disalita aggiornamenti feed da %s."
+msgstr "Disabilita aggiornamenti feed da %s."
 
 #: bin/gpo:751
 #, python-format
 msgid "Enabling feed update from %s."
-msgstr "Abilita addiornamenti feed da %s."
+msgstr "Abilita aggiornamenti feed da %s."
 
 #: bin/gpo:780
 msgid "No podcasts found."
