Updated Italian translation, thanks to @bovirus and his suggestions on #1679

--- a/po/it.po
+++ b/po/it.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: gPodder -Translation v. 21.09.2023\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-08 13:25+0100\n"
-"PO-Revision-Date: 2024-12-08 17:55+0100\n"
+"PO-Revision-Date: 2024-12-13 08:35+0100\n"
 "Last-Translator: bovirus <bovirus@gmail.com>\n"
 "Language-Team: Italian (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: it\n"
@@ -78,7 +78,7 @@ msgstr "Errore nell'interrogare soundcloud: %(code)s %(msg)s"
 #: src/gpodder/directory.py:199
 #, python-format
 msgid "Unexpected response from soundcloud: %r"
-msgstr "Risposta inaspettata dal soundcloud: %r"
+msgstr "Risposta non prevista dal soundcloud: %r"
 
 #: src/gpodder/directory.py:204
 msgid "Imported OPML file"
@@ -1980,7 +1980,7 @@ msgstr "Ricera Podiverso"
 
 #: share/gpodder/extensions/podverse.py:37
 msgid "Please provide at least 3 characters"
-msgstr "Fornire almento 3 caratteri"
+msgstr "Sono necessari almeno 3 caratteri"
 
 #: share/gpodder/extensions/podverse.py:43
 #, python-format
@@ -2060,7 +2060,7 @@ msgstr "Statistiche iscrizioni"
 
 #: share/gpodder/extensions/subscription_stats.py:18
 msgid "Show publishing statistics for subscriptions."
-msgstr "Mostra le statistiche per le iscrizioni."
+msgstr "Mostra statistiche di pubblicazione per gli abbonamenti."
 
 #: share/gpodder/extensions/subscription_stats.py:52
 msgid "Updated"
@@ -2380,7 +2380,7 @@ msgstr "Di sistema"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Light"
-msgstr "Luminoso"
+msgstr "Chiaro"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:10
 msgid "Dark"
