make messages again

--- a/po/it.po
+++ b/po/it.po
@@ -2568,7 +2568,9 @@ msgstr "Usa nome utente e password"
 msgid ""
 "Proxies given in environment variables (will be used only if proxy above is "
 "disabled):"
-msgstr "Proxy specificati nelle variabili ambiente (verranno usati solo se il proxy sopra è disabilitato):"
+msgstr ""
+"Proxy specificati nelle variabili ambiente (verranno usati solo se il proxy "
+"sopra è disabilitato):"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:58
 msgid "Network"
